// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Coverage > renders no trigger with no children 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  class="z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
  data-react-aria-pressable="true"
  data-slot="trigger"
  tabindex="0"
  type="button"
/>
`;

exports[`Story Snapshots > AllSections 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
    data-react-aria-pressable="true"
    data-slot="trigger"
    tabindex="0"
    type="button"
  >
    i am the trigger
  </button>
</div>
`;

exports[`Story Snapshots > BlockOuterScrollbar 1`] = `
<div>
  <div
    class="h-[2000px]"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
      data-react-aria-pressable="true"
      data-slot="trigger"
      data-testid="testId42"
      tabindex="0"
      type="button"
    >
      i am the trigger
    </button>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
    data-react-aria-pressable="true"
    data-slot="trigger"
    tabindex="0"
    type="button"
  >
    i am the trigger
  </button>
</div>
`;

exports[`Story Snapshots > DoubleScrollbar 1`] = `
<div>
  <div
    class="h-[2000px]"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
      data-react-aria-pressable="true"
      data-slot="trigger"
      data-testid="testId42"
      tabindex="0"
      type="button"
    >
      i am the trigger
    </button>
  </div>
</div>
`;

exports[`Story Snapshots > Footer 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
    data-react-aria-pressable="true"
    data-slot="trigger"
    tabindex="0"
    type="button"
  >
    i am the trigger
  </button>
</div>
`;

exports[`Story Snapshots > Title 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
    data-react-aria-pressable="true"
    data-slot="trigger"
    tabindex="0"
    type="button"
  >
    i am the trigger
  </button>
</div>
`;

exports[`Story Snapshots > TooMuchContent 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
    data-react-aria-pressable="true"
    data-slot="trigger"
    data-testid="testId42"
    tabindex="0"
    type="button"
  >
    i am the trigger
  </button>
</div>
`;

exports[`Story Snapshots > WithCustomTriggerButton 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-hidden data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none shadow-lg shadow-success/40 bg-success text-success-foreground data-[hover=true]:opacity-hover z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
    data-react-aria-pressable="true"
    data-slot="trigger"
    tabindex="0"
    type="button"
  >
    i am a custom trigger
  </button>
</div>
`;
